# circularbyteregion

./: CMakeLists.txt  README.md  circularbyte.cpp  circularbyte.h  main.cpp
